namespace MTG_Emulator.Backend.DB.Models
{
    public static class Roles
    {
        public const string Admin = "Admin";
        public const string Player = "Player";
    }
}