namespace MTG_Emulator.Shared.Db.DTO.AuthenticationDTO;

public class LoginDto
{
    public string Email { get; set; } = string.Empty;
    public string Password { get; set; } = string.Empty;
}