@startuml

class ControllerBase
class IdentityUser
class IdentityRole
class IdentityDbContext

class ApiRole {
}

class ApiUser {
    + Player? Player
}

class Roles {
    {static} + Admin : string
    {static} + Player : string
}

class Player {
    + PlayerId : int
    + Username : string
    + GamesWon : int
    + GamesLost : int
    + GamesDrawn : int
    + ApiUserId : string
    + ApiUser : ApiUser
    + Decks : List<Deck>
}

class Deck {
    + DeckId : int
    + DeckName : string
    + CommandZone : List<Card>
    + DeckCards : List<DeckCard>
    + Player : Player
}

class MTGContext {
    + Cards : DbSet<Card>
    + Decks : DbSet<Deck>
    + RelatedCards : DbSet<RelatedCard>
    + Players : DbSet<Player>
    + AltFaces : DbSet<CardFace>
    + Games : DbSet<Game>
    # OnModelCreating(modelBuilder)
}

class RegisterDto {
    + Username : string
    + Email : string
    + Password : string
    + Role : string
}

class LoginDto {
    + Email : string
    + Password : string
}

class LoginResponseDto {
    + Username : string
    + Token : string
}

class ResetPasswordDto {
    + TargetUsername : string?
    + NewPassword : string
    + ConfirmPassword : string
}

class MtgController {
    + IsOwnerOrAdmin(resourceApiUserId: string) : bool
    # {static} ToCardDto(card: Card) : CardDto
}

class AuthenticationController {
    - configuration : IConfiguration
    - userManager : UserManager<ApiUser>
    - context : MTGContext

    + Register(dto: RegisterDto) : Task<IActionResult>
    + Login(dto: LoginDto) : Task<IActionResult>
    + ResetPassword(dto: ResetPasswordDto) : Task<IActionResult>
    + DeleteAccount(targetUsername: string?) : Task<IActionResult>
    - generateJwt(user: ApiUser, roles: IList<string>) : string
}

ApiUser --|> IdentityUser
ApiRole --|> IdentityRole
MTGContext --|> IdentityDbContext
MtgController --|> ControllerBase
AuthenticationController --|> MtgController

ApiUser "1" --> "0..1" Player : has
Player "1" o-- "*" Deck : owns

MTGContext --> ApiUser
MTGContext --> ApiRole
MTGContext --> Player
MTGContext --> Deck

AuthenticationController ..> RegisterDto
AuthenticationController ..> LoginDto
AuthenticationController ..> LoginResponseDto
AuthenticationController ..> ResetPasswordDto
AuthenticationController ..> ApiUser
AuthenticationController ..> Roles
AuthenticationController --> MTGContext
AuthenticationController --> ApiUser : via UserManager

@enduml